--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.9.4
 djangorestframework-jwt==1.11.0
 entrypoints==0.3
 flake8==3.7.7
+gunicorn==19.9.0
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.1
@@ -25,3 +26,4 @@ simplejson==3.16.0
 sqlparse==0.3.0
 uritemplate==3.0.0
 urllib3==1.25.3
+whitenoise==4.1.2
